--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -127,6 +127,7 @@
                                 android:enabled="false"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
+                                android:inputType="text|textNoSuggestions"
                                 android:maxLength="12"
                                 android:maxLines="1"
                                 android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
@@ -164,7 +165,7 @@
                                     android:digits="@string/password_characters"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:imeOptions="actionNext"
-                                    android:inputType="textPassword"
+                                    android:inputType="text|textNoSuggestions"
                                     android:longClickable="false"
                                     android:maxLength="12"
                                     android:maxLines="1"
@@ -282,7 +283,7 @@
                                 android:digits="@string/password_characters"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
-                                android:inputType="textPassword"
+                                android:inputType="text|textNoSuggestions"
                                 android:longClickable="false"
                                 android:maxLength="12"
                                 android:maxLines="1"
