--- a/app/src/main/res/layout/activity_edit_address.xml
+++ b/app/src/main/res/layout/activity_edit_address.xml
@@ -86,11 +86,11 @@
                         android:id="@+id/addressLineOneET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -149,11 +149,11 @@
                         android:id="@+id/addressLineTwoET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -214,11 +214,11 @@
                         android:id="@+id/cityET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
-                        android:inputType="textVisiblePassword|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -342,11 +342,11 @@
                         android:id="@+id/zipcodeET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="0123456789"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
-                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:inputType="number|textNoSuggestions"
                         android:maxLength="5"
                         android:maxLines="1"
@@ -555,7 +555,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890/-#&amp;(),:.;"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="textVisiblePassword"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="100"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -614,11 +614,12 @@
                         android:id="@+id/b_cityET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
-                        android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                         android:imeOptions="actionNext"
-                        android:inputType="textVisiblePassword"
+                        android:importantForAutofill="no"
+                        android:inputType="text|textNoSuggestions"
                         android:maxLength="50"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -736,13 +737,13 @@
                         android:id="@+id/b_zipcodeET"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:digits="0123456789"
                         android:autofillHints="AUTOFILL_HINT_SMS_OTP"
+                        android:digits="0123456789"
                         android:fontFamily="@font/opensans_semibold"
+                        android:hint="@string/zip"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
-                        android:hint="@string/zip"
-                        android:inputType="number|textVisiblePassword"
+                        android:inputType="number|textNoSuggestions"
                         android:maxLength="5"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
