--- a/app/src/main/res/layout/activity_gift_card_details.xml
+++ b/app/src/main/res/layout/activity_gift_card_details.xml
@@ -191,7 +191,7 @@
                                     android:autofillHints="AUTOFILL_HINT_SMS_OTP"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:imeOptions="actionNext"
-                                    android:inputType="numberDecimal"
+                                    android:inputType="numberDecimal|textNoSuggestions"
                                     android:maxLength="@string/maxlength"
                                     android:padding="@dimen/_14sdp"
                                     android:textColor="@color/text_color"
@@ -247,7 +247,7 @@
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
-                            android:inputType="textVisiblePassword|textCapSentences|textNoSuggestions"
+                            android:inputType="text|textCapSentences|textNoSuggestions"
                             android:maxLength="30"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
@@ -305,7 +305,7 @@
                             android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
-                            android:inputType="textVisiblePassword|textNoSuggestions|textCapSentences"
+                            android:inputType="text|textNoSuggestions|textCapSentences"
                             android:maxLength="30"
                             android:maxLines="1"
                             android:padding="@dimen/_14sdp"
