--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -85,7 +85,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="textVisiblePassword|textCapSentences|textNoSuggestions"
+                        android:inputType="text|textCapSentences|textNoSuggestions"
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -142,7 +142,7 @@
                         android:digits="abcdefghijklmnopqrstuvwxyz ABCDEFGHIJKLMNOPQRSTUVWXYZ"
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionNext"
-                        android:inputType="textVisiblePassword|textNoSuggestions|textCapSentences"
+                        android:inputType="text|textNoSuggestions|textCapSentences"
                         android:maxLength="30"
                         android:maxLines="1"
                         android:padding="@dimen/_14sdp"
@@ -297,7 +297,7 @@
                             android:fontFamily="@font/opensans_semibold"
                             android:imeOptions="actionNext"
                             android:importantForAutofill="no"
-                            android:inputType="textPassword|textNoSuggestions"
+                            android:inputType="text|textNoSuggestions"
                             android:longClickable="false"
                             android:maxLength="12"
                             android:padding="@dimen/_14sdp"
@@ -408,7 +408,7 @@
                         android:fontFamily="@font/opensans_semibold"
                         android:imeOptions="actionDone"
                         android:importantForAutofill="no"
-                        android:inputType="textPassword|textNoSuggestions"
+                        android:inputType="text|textNoSuggestions"
                         android:longClickable="false"
                         android:maxLength="12"
                         android:padding="@dimen/_14sdp"
