--- a/app/src/main/res/layout/activity_reserve_payout.xml
+++ b/app/src/main/res/layout/activity_reserve_payout.xml
@@ -203,13 +203,13 @@
                                 android:orientation="horizontal">
 
                                 <TextView
-                                    android:id="@+id/reference_id"
+                                    android:id="@+id/ref_id"
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:layout_weight="1"
                                     android:fontFamily="@font/opensans_semibold"
                                     android:gravity="end"
-                                    android:text="1d3hsM734h…"
+                                    android:text=""
                                     android:textColor="@color/primary_black"
                                     android:textSize="@dimen/_11ssp" />
 
