--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
 
-    <style name="Theme.QuickCard" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme_Coyni_Update" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/status</item>
         <item name="colorPrimaryVariant">@color/status</item>
@@ -13,7 +13,7 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 
-        <item name="colorOnSurface">@color/headcolor</item>
+        <item name="colorOnSurface">@color/text_color</item>
         <item name="android:background">@color/white</item>
         <item name="android:windowDisablePreview">true</item>
     </style>
