--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -100,7 +100,7 @@
                                 android:digits="@string/password_characters"
                                 android:fontFamily="@font/opensans_semibold"
                                 android:imeOptions="actionDone"
-                                android:inputType="textPassword"
+                                android:inputType="text|textNoSuggestions"
                                 android:longClickable="false"
                                 android:maxLength="12"
                                 android:maxLines="1"
