--- a/app/src/main/res/layout/business_profile_accounts_item.xml
+++ b/app/src/main/res/layout/business_profile_accounts_item.xml
@@ -63,7 +63,9 @@
             android:padding="@dimen/_10sdp"
             android:text=""
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/_11ssp" />
+            android:textSize="@dimen/_11ssp"
+            android:maxLines="1"
+            android:ellipsize="end"/>
 
         <TextView
             android:id="@+id/statusTV"
