--- a/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
+++ b/app/src/main/res/layout/activity_withdraw_gift_card_in_progress.xml
@@ -13,146 +13,152 @@
         android:gravity="center"
         android:orientation="vertical">
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_above="@+id/bottomLL"
-            android:orientation="vertical">
-
-            <ImageView
-                android:id="@+id/imgLogo"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_marginTop="@dimen/_30sdp"
-                android:layout_marginBottom="@dimen/_23sdp"
-                android:src="@drawable/ic_in_progress_icon" />
-
-            <TextView
-                android:id="@+id/giftCardTypeTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/opensans_semibold"
-                android:gravity="center"
-                android:text="Amazon Gift Card"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
-
-            <TextView
-                android:id="@+id/tvSuccess"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:fontFamily="@font/opensans_bold"
-                android:gravity="center"
-                android:text="Request Sent Successfully"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_16ssp"
-                android:visibility="gone" />
+            android:scrollbars="none">
 
             <LinearLayout
-                android:id="@+id/lyAmount"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_9sdp"
-                android:layout_marginBottom="@dimen/_5sdp"
-                android:gravity="center_horizontal"
-                android:orientation="horizontal">
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imgLogo"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:layout_marginBottom="@dimen/_23sdp"
+                    android:src="@drawable/ic_in_progress_icon" />
 
                 <TextView
-                    android:id="@+id/goneTV"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/giftCardTypeTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_semibold"
+                    android:gravity="center"
+                    android:text="Amazon Gift Card"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <TextView
+                    android:id="@+id/tvSuccess"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:fontFamily="@font/opensans_bold"
                     android:gravity="center"
-                    android:paddingLeft="@dimen/_10sdp"
-                    android:paddingTop="@dimen/_9sdp"
-                    android:paddingBottom="@dimen/_7sdp"
-                    android:text="$"
+                    android:text="Request Sent Successfully"
                     android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_32ssp" />
-
-                <TextView
-                    android:id="@+id/giftCardAmountTV"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginLeft="@dimen/_5sdp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_35sdp" />
-
-                <TextView
-                    android:id="@+id/tvCurrency"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center_vertical"
-                    android:layout_marginLeft="@dimen/_5sdp"
-                    android:layout_marginTop="@dimen/_7sdp"
-                    android:fontFamily="@font/opensans_bold"
-                    android:text="CYN"
-                    android:textColor="@color/primary_black"
-                    android:textSize="@dimen/_11ssp"
-                    android:visibility="gone"/>
-            </LinearLayout>
-
-            <TextView
-                android:id="@+id/giftCardDescTV"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_12sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:gravity="center"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
-
-            <LinearLayout
-                android:id="@+id/lyReference"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="@dimen/_30sdp"
-                android:orientation="horizontal"
-                android:paddingStart="@dimen/_10sdp"
-                android:paddingEnd="@dimen/_10sdp">
-
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:fontFamily="@font/opensans_regular"
-                    android:text="Reference ID"
-                    android:textColor="@color/dark_grey"
-                    android:textSize="@dimen/_11ssp" />
+                    android:textSize="@dimen/_16ssp"
+                    android:visibility="gone" />
 
                 <LinearLayout
-                    android:id="@+id/refIDLL"
-                    android:layout_width="wrap_content"
+                    android:id="@+id/lyAmount"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:gravity="right"
+                    android:layout_marginTop="@dimen/_9sdp"
+                    android:layout_marginBottom="@dimen/_5sdp"
+                    android:gravity="center_horizontal"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/refIDTV"
+                        android:id="@+id/goneTV"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:fontFamily="@font/opensans_semibold"
-                        android:gravity="right"
-                        android:textColor="@color/black"
+                        android:layout_gravity="center"
+                        android:fontFamily="@font/opensans_bold"
+                        android:gravity="center"
+                        android:paddingLeft="@dimen/_10sdp"
+                        android:paddingTop="@dimen/_9sdp"
+                        android:paddingBottom="@dimen/_7sdp"
+                        android:text="$"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_32ssp" />
+
+                    <TextView
+                        android:id="@+id/giftCardAmountTV"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:fontFamily="@font/opensans_bold"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_35sdp" />
+
+                    <TextView
+                        android:id="@+id/tvCurrency"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_marginLeft="@dimen/_5sdp"
+                        android:layout_marginTop="@dimen/_7sdp"
+                        android:fontFamily="@font/opensans_bold"
+                        android:text="CYN"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp"
+                        android:visibility="gone" />
+                </LinearLayout>
+
+                <TextView
+                    android:id="@+id/giftCardDescTV"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_12sdp"
+                    android:fontFamily="@font/opensans_regular"
+                    android:gravity="center"
+                    android:textColor="@color/primary_black"
+                    android:textSize="@dimen/_11ssp" />
+
+                <LinearLayout
+                    android:id="@+id/lyReference"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_30sdp"
+                    android:orientation="horizontal"
+                    android:paddingStart="@dimen/_10sdp"
+                    android:paddingEnd="@dimen/_10sdp">
+
+                    <TextView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="Reference ID"
+                        android:textColor="@color/dark_grey"
                         android:textSize="@dimen/_11ssp" />
 
-                    <ImageView
-                        android:layout_width="@dimen/_9sdp"
-                        android:layout_height="@dimen/_11sdp"
-                        android:layout_gravity="center"
-                        android:layout_marginLeft="@dimen/_8sdp"
-                        android:src="@drawable/ic_copy" />
+                    <LinearLayout
+                        android:id="@+id/refIDLL"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:gravity="right"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:id="@+id/refIDTV"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:fontFamily="@font/opensans_semibold"
+                            android:gravity="right"
+                            android:textColor="@color/black"
+                            android:textSize="@dimen/_11ssp" />
+
+                        <ImageView
+                            android:layout_width="@dimen/_9sdp"
+                            android:layout_height="@dimen/_11sdp"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="@dimen/_8sdp"
+                            android:src="@drawable/ic_copy" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
             </LinearLayout>
-
-        </LinearLayout>
+        </ScrollView>
 
         <LinearLayout
             android:id="@+id/bottomLL"
@@ -196,7 +202,7 @@
                     android:text="@string/learn"
                     android:textColor="@color/primary_green"
                     android:textSize="@dimen/_10sdp"
-                    android:visibility="gone"/>
+                    android:visibility="gone" />
             </LinearLayout>
 
             <androidx.cardview.widget.CardView
@@ -222,5 +228,4 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
     </RelativeLayout>
-    <!--    </ScrollView>-->
 </LinearLayout>
