--- a/app/src/main/res/layout/activity_dba_information.xml
+++ b/app/src/main/res/layout/activity_dba_information.xml
@@ -481,7 +481,7 @@
                     android:paddingLeft="@dimen/_8sdp"
                     android:paddingTop="@dimen/_13sdp"
                     android:paddingBottom="@dimen/_14sdp"
-                    android:visibility="gone">
+                    android:visibility="visible">
 
 
                     <ImageView
