--- a/app/src/main/res/layout/payout_transactions_filter.xml
+++ b/app/src/main/res/layout/payout_transactions_filter.xml
@@ -81,7 +81,7 @@
                 android:background="@drawable/bg_square_withoutcolor_corners"
                 android:clickable="true"
                 android:editable="false"
-                android:focusable="true"
+                android:focusable="false"
                 android:fontFamily="@font/opensans_semibold"
                 android:hint="@string/date_range"
                 android:textColor="@color/primary_black"
