--- a/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
+++ b/app/src/main/res/layout/selectedpaymentmethodlistitem.xml
@@ -3,151 +3,208 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="@dimen/_48sdp"
+    xmlns:swipe="http://schemas.android.com/tools"
     android:background="@color/white">
 
-    <ImageView
-        android:id="@+id/imgPayMethod"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:src="@drawable/ic_select_bank"></ImageView>
-
-    <LinearLayout
+    <com.coyni.mapp.utils.swipelayout.SwipeLayout
+        android:id="@+id/swipeLayout"
+        swipe:leftEdgeSwipeOffset="0dp"
+        swipe:rightEdgeSwipeOffset="0dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:layout_marginLeft="@dimen/_10sdp"
-        android:layout_toRightOf="@+id/imgPayMethod"
-        android:gravity="center_vertical"
-        android:orientation="vertical">
+        android:layout_height="wrap_content">
+
 
         <LinearLayout
-            android:id="@+id/layoutBank"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="visible">
+            android:id="@+id/swipeLL"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent">
 
-            <TextView
-                android:id="@+id/tvBankName"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.8"
-                android:fontFamily="@font/opensans_semibold"
-                android:singleLine="true"
-                android:text="Bank of America"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp"></TextView>
-
-            <TextView
-                android:id="@+id/tvAccount"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="1.2"
-                android:fontFamily="@font/opensans_semibold"
-                android:text="••••5359"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp"></TextView>
-
-            <ImageView
-                android:id="@+id/imgBankTick"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:src="@drawable/ic_custom_tick"
-                android:visibility="gone"
-                app:tint="@color/primary_green" />
-
-            <ImageView
-                android:id="@+id/imgBankArrow"
+            <LinearLayout
+                android:id="@+id/editLL"
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_vertical"
-                android:src="@drawable/ic_chevron_right"
-                android:visibility="visible" />
+                android:layout_height="match_parent"
+                android:background="@color/txn_completed_trans">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/_15sdp"
+                    android:layout_marginEnd="@dimen/_15sdp"
+                    android:src="@drawable/ic_edit"
+                    app:tint="@color/primary_green" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/deleteLL"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:background="@color/notif_delete_bg">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginStart="@dimen/_15sdp"
+                    android:layout_marginEnd="@dimen/_15sdp"
+                    android:src="@drawable/ic_delete" />
+            </LinearLayout>
+
         </LinearLayout>
+
 
         <RelativeLayout
-            android:id="@+id/layoutCard"
+            android:id="@+id/mainRL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:visibility="gone">
+            android:background="@color/white">
 
-            <TextView
-                android:id="@+id/tvCardName"
+            <ImageView
+                android:id="@+id/imgPayMethod"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:fontFamily="@font/opensans_semibold"
-                android:gravity="left"
-                android:text="Bank Name"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_12ssp" />
+                android:src="@drawable/ic_select_bank"></ImageView>
 
-            <TextView
-                android:id="@+id/tvCardNumber"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="@dimen/_6sdp"
-                android:layout_toRightOf="@+id/tvCardName"
-                android:fontFamily="@font/opensans_semibold"
-                android:gravity="left"
-                android:text="••••5359"
-                android:textColor="@color/primary_black"
-                android:textSize="@dimen/_11ssp" />
-
-            <ImageView
-                android:id="@+id/imgCardTick"
-                android:layout_width="@dimen/_20sdp"
-                android:layout_height="@dimen/_20sdp"
-                android:layout_alignParentRight="true"
-                android:layout_gravity="right"
-                android:src="@drawable/ic_custom_tick"
-                android:visibility="gone"
-                app:tint="@color/primary_green" />
-
-            <ImageView
-                android:id="@+id/imgCardArrow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_gravity="right"
-                android:src="@drawable/ic_chevron_right"
-                android:visibility="gone" />
-        </RelativeLayout>
-
-        <LinearLayout
-            android:id="@+id/layoutError"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_3sdp"
-            android:orientation="horizontal"
-            android:visibility="gone">
-
-            <ImageView
-                android:layout_width="@dimen/_12sdp"
-                android:layout_height="@dimen/_12sdp"
-                android:src="@drawable/ic_erro" />
-
-            <TextView
-                android:id="@+id/tvError"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/_10sdp"
-                android:fontFamily="@font/opensans_regular"
-                android:text="There’s a issue with your payment"
-                android:textColor="@color/error_red"
-                android:textSize="@dimen/_10ssp"></TextView>
+                android:layout_toRightOf="@+id/imgPayMethod"
+                android:gravity="center_vertical"
+                android:orientation="vertical">
 
-        </LinearLayout>
-    </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/layoutBank"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="visible">
 
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="1dp"
-        android:background="@color/viewcolor"></View>
+                    <TextView
+                        android:id="@+id/tvBankName"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="0.8"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:singleLine="true"
+                        android:text="Bank of America"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_12ssp"></TextView>
+
+                    <TextView
+                        android:id="@+id/tvAccount"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1.2"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:text="••••5359"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp"></TextView>
+
+                    <ImageView
+                        android:id="@+id/imgBankTick"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:src="@drawable/ic_custom_tick"
+                        android:visibility="gone"
+                        app:tint="@color/primary_green" />
+
+                    <ImageView
+                        android:id="@+id/imgBankArrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:src="@drawable/ic_chevron_right"
+                        android:visibility="visible" />
+                </LinearLayout>
+
+                <RelativeLayout
+                    android:id="@+id/layoutCard"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <TextView
+                        android:id="@+id/tvCardName"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:gravity="left"
+                        android:text="Bank Name"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_12ssp" />
+
+                    <TextView
+                        android:id="@+id/tvCardNumber"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_centerVertical="true"
+                        android:layout_marginLeft="@dimen/_6sdp"
+                        android:layout_toRightOf="@+id/tvCardName"
+                        android:fontFamily="@font/opensans_semibold"
+                        android:gravity="left"
+                        android:text="••••5359"
+                        android:textColor="@color/primary_black"
+                        android:textSize="@dimen/_11ssp" />
+
+                    <ImageView
+                        android:id="@+id/imgCardTick"
+                        android:layout_width="@dimen/_20sdp"
+                        android:layout_height="@dimen/_20sdp"
+                        android:layout_alignParentRight="true"
+                        android:layout_gravity="right"
+                        android:src="@drawable/ic_custom_tick"
+                        android:visibility="gone"
+                        app:tint="@color/primary_green" />
+
+                    <ImageView
+                        android:id="@+id/imgCardArrow"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentRight="true"
+                        android:layout_centerVertical="true"
+                        android:layout_gravity="right"
+                        android:src="@drawable/ic_chevron_right"
+                        android:visibility="gone" />
+                </RelativeLayout>
+
+                <LinearLayout
+                    android:id="@+id/layoutError"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/_3sdp"
+                    android:orientation="horizontal"
+                    android:visibility="gone">
+
+                    <ImageView
+                        android:layout_width="@dimen/_12sdp"
+                        android:layout_height="@dimen/_12sdp"
+                        android:src="@drawable/ic_erro" />
+
+                    <TextView
+                        android:id="@+id/tvError"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="@dimen/_10sdp"
+                        android:fontFamily="@font/opensans_regular"
+                        android:text="There’s a issue with your payment"
+                        android:textColor="@color/error_red"
+                        android:textSize="@dimen/_10ssp"></TextView>
+
+                </LinearLayout>
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginBottom="1dp"
+                android:background="@color/viewcolor"></View>
+
+        </RelativeLayout>
+    </com.coyni.mapp.utils.swipelayout.SwipeLayout>
 </RelativeLayout>
