Switch DBA rollback

--- a/app/src/main/res/layout/outline_bo_ssn.xml
+++ b/app/src/main/res/layout/outline_bo_ssn.xml
@@ -30,7 +30,7 @@
             android:hint="SSN"
             android:imeOptions="actionDone"
             android:importantForAutofill="noExcludeDescendants"
-            android:inputType="numberPassword"
+            android:inputType="number"
             android:maxLines="1"
             android:padding="14dp"
             android:singleLine="true"
