Add New Account changes

--- a/app/src/main/res/layout/business_comapany_listitem.xml
+++ b/app/src/main/res/layout/business_comapany_listitem.xml
@@ -17,24 +17,12 @@
         android:layout_marginBottom="@dimen/_14sdp"
         android:orientation="horizontal">
 
-<!--        <androidx.cardview.widget.CardView-->
-<!--            android:layout_width="@dimen/_33sdp"-->
-<!--            android:layout_margin="@dimen/_2sdp"-->
-<!--            android:layout_height="@dimen/_33sdp"-->
-<!--            app:cardCornerRadius="@dimen/_16sdp">-->
-
-<!--            <ImageView-->
-<!--                android:id="@+id/profileImage"-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:src="@drawable/profile" />-->
-<!--        </androidx.cardview.widget.CardView>-->
         <androidx.cardview.widget.CardView
             android:layout_width="@dimen/_35sdp"
             android:layout_height="@dimen/_35sdp"
             android:layout_gravity="center"
-            app:cardBackgroundColor="@color/white"
             android:layout_margin="@dimen/_2sdp"
+            app:cardBackgroundColor="@color/white"
             app:cardCornerRadius="@dimen/_18sdp">
 
             <ImageView
@@ -48,18 +36,34 @@
 
         </androidx.cardview.widget.CardView>
 
-
-        <TextView
-            android:id="@+id/title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/_15sdp"
-            android:layout_marginTop="@dimen/_10ssp"
             android:layout_weight="1"
-            android:fontFamily="@font/opensans_semibold"
-            android:text=""
-            android:textColor="@drawable/dba_text_enable_disable"
-            android:textSize="@dimen/text_size_14sp" />
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_10ssp"
+                android:fontFamily="@font/opensans_semibold"
+                android:text=""
+                android:textColor="@drawable/dba_text_enable_disable"
+                android:textSize="@dimen/text_size_12sp" />
+
+            <TextView
+                android:id="@+id/tvDBACount"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/_15sdp"
+                android:layout_marginTop="@dimen/_10ssp"
+                android:fontFamily="@font/opensans_regular"
+                android:text=""
+                android:textColor="@color/xdark_gray"
+                android:textSize="@dimen/text_size_11sp" />
+        </LinearLayout>
 
         <LinearLayout
             android:id="@+id/statusLL"
