--- a/app/src/main/res/layout/activity_business_personal_accounts.xml
+++ b/app/src/main/res/layout/activity_business_personal_accounts.xml
@@ -180,7 +180,7 @@
                     android:layout_gravity="center_vertical"
                     android:layout_marginStart="@dimen/_15sdp"
                     android:fontFamily="@font/opensans_semibold"
-                    android:text="@string/open_new_account"
+                    android:text="@string/add_new_account"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_11sdp" />
 
