--- a/app/src/main/res/layout/business_add_new_business_account.xml
+++ b/app/src/main/res/layout/business_add_new_business_account.xml
@@ -3,8 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@color/white">
+    android:background="@color/white"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -19,31 +19,39 @@
             android:layout_marginTop="@dimen/_40sdp"
             android:layout_marginBottom="@dimen/_9sdp">
 
-        <ImageView
-            android:id="@+id/imv_close"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingTop="@dimen/_4sdp"
-            android:paddingEnd="@dimen/_10sdp"
-            android:paddingBottom="@dimen/_4sdp"
-            android:layout_marginRight="@dimen/_10sdp"
-            android:src="@drawable/ic_x"
-            />
+            <ImageView
+                android:id="@+id/imv_close"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginRight="@dimen/_10sdp"
+                android:paddingTop="@dimen/_4sdp"
+                android:paddingEnd="@dimen/_10sdp"
+                android:paddingBottom="@dimen/_4sdp"
+                android:src="@drawable/ic_x" />
         </LinearLayout>
+
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Open New Account"
+            android:layout_marginBottom="@dimen/_15sdp"
             android:fontFamily="@font/opensans_bold"
-            android:textSize="@dimen/_16ssp"
+            android:text="Add Business Account"
             android:textColor="@color/primary_black"
-            android:layout_marginBottom="@dimen/_20sdp"
-            />
+            android:textSize="@dimen/_16ssp" />
+
+        <TextView
+            android:id="@+id/tvMessage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/opensans_regular"
+            android:text="What type of business do you want to add?"
+            android:textColor="@color/primary_black"
+            android:textSize="@dimen/_11ssp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/_76sdp"
+            android:layout_marginTop="@dimen/_35sdp"
             android:orientation="vertical">
 
             <LinearLayout
@@ -61,15 +69,15 @@
                     android:layout_gravity="center"
                     android:layout_marginVertical="@dimen/_19sdp"
                     android:layout_marginStart="@dimen/_10ssp"
-                    android:src="@drawable/ic_company_info_business" />
+                    android:src="@drawable/ic_company_info_business1" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="center"
                     android:layout_marginStart="@dimen/_10ssp"
                     android:fontFamily="@font/opensans_semibold"
                     android:text="New Company"
-                    android:layout_gravity="center"
                     android:textColor="@color/primary_black"
                     android:textSize="@dimen/_12ssp" />
             </LinearLayout>
@@ -88,8 +96,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
-                    android:layout_marginStart="@dimen/_10ssp"
                     android:layout_marginVertical="@dimen/_19sdp"
+                    android:layout_marginStart="@dimen/_10ssp"
                     android:src="@drawable/ic_dba" />
 
                 <TextView
